--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@
 
 .fondo-btn a{
     text-decoration: none;
-    color: #b0b0b0;
+    color: #c5c5c5;
+    font-size: 18px;
     font-family: "Uncial Antiqua", system-ui;
     position: relative;
     z-index: 20;
@@ -64,8 +65,8 @@
     border-radius: 15px;
     z-index: 50;
     margin-left:49px;
-    background-color: #0b0b1b75;      
-    color: #b0b0b0;
+    background-color: #0b0b1bb7;      
+    color: #c5c5c5;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -74,7 +75,31 @@
     position: absolute;   
     border: 1px solid #79797979;
     box-shadow: 0px 0px 100px #000000;
-    animation: zoomInsAbrir 2s ease-in forwards;
+    animation: zoomInsAbrir 1s ease-in forwards;
+}
+
+.instrucciones p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
+    font-size: 16px;
+    margin-top: 5px;
+    text-align: left;
+    line-height: 1.3;
+}
+
+.instrucciones p i{
+    color: rgb(197, 27, 27);
+    font-weight: 600;
+}
+
+.msj i{
+    color: rgb(248, 165, 40) !important; 
+    font-weight: 600;
+}
+
+.msj i:last-child{
+    font-family: "Uncial Antiqua", system-ui;
+    letter-spacing: 2px;
 }
 
 #cerrar{
@@ -82,7 +107,7 @@
 }
 
 #cerrar img{
-    width: 35px;
+    width: 30px;
     cursor: pointer;
 }
 
@@ -106,7 +131,7 @@
         transform-origin: center center;
     }
     100% {
-        transform: scale(1.3);
+        transform: scale(1.5);
         opacity: 1;
         transform-origin: center center;
     }
@@ -114,7 +139,7 @@
 
 @keyframes zoomInsCerrar{
     0% {
-        transform: scale(1.3);
+        transform: scale(1.5);
         opacity: 1;
         transform-origin: center center;
     }
@@ -132,18 +157,19 @@
 .pantalla-carga{
     display: none;
     width: 90%;
-    height: 55vh;
+    height: 65vh;
     position: absolute;
     z-index: 5;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .pantalla-carga button{
-    width: 150px;
+    width: 250px;
     height: 40px;
-    display: none;
+    display: inline;
+    opacity: 0;
     background-color: #b0b0b0;
     border: none;
     border-radius: 5px;
@@ -175,9 +201,13 @@
 
 .pantalla-carga p{
     font-size: 20px;
-    color: #b0b0b0;
-    font-family: "Uncial Antiqua", system-ui;
-    margin-bottom: 50px;
+    color: #c5c5c5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
+}
+
+.pantalla-carga p i{
+    color: rgb(197, 27, 27);
 }
 
 @keyframes girar {
@@ -188,6 +218,15 @@
         transform: rotate(360deg);
     }
 }
+
+
+
+
+
+
+
+
+
 
 
 /*ESTILOS PAGINA DEL JUEGO*/
