--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
     font-style: normal;
 }  
 
+.dancing-script {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
 
 *{
     padding: 0;
@@ -46,6 +53,10 @@
     align-items: center;
 }
 
+.fondo-btn:first-child{
+    display: none;
+}
+
 .fondo-btn a{
     text-decoration: none;
     color: #c5c5c5;
@@ -60,7 +71,7 @@
 }
 
 .instrucciones{
-    width: 290px;
+    width: 320px;
     padding: 15px;
     border-radius: 15px;
     z-index: 50;
@@ -82,9 +93,9 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     font-size: 16px;
-    margin-top: 5px;
     text-align: left;
     line-height: 1.3;
+    text-shadow: 2px 1px 2px black;
 }
 
 .instrucciones p i{
@@ -104,11 +115,60 @@
 
 #cerrar{
     align-self: flex-end;
+    width:65%;
+    display: flex;
+    justify-content: space-between;    
+}
+
+#cerrar p{
+    height: 30px;
+    font-family: "Dancing Script", cursive;
+    font-size: 25px;
+    letter-spacing: 2px;  
+    text-shadow: 1px 1px 3px rgb(197, 27, 27);  
+    border-bottom: 1px solid red;
+    margin-bottom: 5px;    
 }
 
 #cerrar img{
-    width: 30px;
+    width: 15px;
+    height: 15px;
     cursor: pointer;
+}
+
+form input{
+    width: 110px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    border-bottom: 1px solid rgb(139, 139, 139);
+    color: rgb(197, 27, 27);
+    font-family: "Dancing Script", cursive;
+    font-size: 25px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+input:focus{
+    outline: none;
+}
+
+.incompleto{
+    outline: 1px solid red;
+}
+
+form button{
+    width: 70px;
+    height: 20px;
+    border: none;
+    border-radius: 3px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 10px;
+    background-color: #b0b0b0;
+}
+
+form button:hover{
+    background-color: white;
 }
 
 @keyframes zoomCentro{
