--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ form button:hover{
     grid-template-columns: 100px 1fr 500px 1fr 100px;
     grid-template-rows: 100px 1fr .7fr 1fr;
 
-    background-image: url(../images/fondo1.png);
+    background-image: url(../images/fondo1.avif);
     background-size: cover;
     background-position: bottom;
     overflow: hidden;
